force-app/main/default/objects/ORTLConseqDesc__mdt.object
<CustomObject>
    <fields>
        <fullName>ConsequenceDesc__c</fullName>
        <label>Consequence Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consequence__c</fullName>
        <label>Consequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>People</fullName>
                    <default>true</default>
                    <label>People</label>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Reputation</fullName>
                </value>
                <value>
                    <fullName>Product Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                    <label>5</label>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ORTL Consequence Description</label>
</CustomObject>